Ensure baking icons support dark mode

--- a/packages/browser-wallet/src/popup/page-layouts/MainLayout/AccountList/AccountList.scss
+++ b/packages/browser-wallet/src/popup/page-layouts/MainLayout/AccountList/AccountList.scss
@@ -1,6 +1,6 @@
-.delegationImage {
+.delegationBakingImage {
     path,
     ellipse {
-        fill: $color-off-black;
+        fill: $color-bg-inverted;
     }
 }
